# picture-sorter

./: .gitignore  Cargo.toml  LICENSE  README.md  test.bat
src/: app_state.rs  cache.rs  exclusion.rs  exiftool.rs  exiftool_executor.rs  exiftool_persistent.rs  expression.rs  format.rs  kv_store.rs  logging.rs  main.rs  metadata.rs  options.rs  picture.rs  sorter.rs  temp.rs
src/special/: mod.rs  motion.rs
