[package]
name = "picture-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
dateparser = "0.2.1"
dpc-pariter = "0.5.1"
interim = { version = "0.2.1", features = ["chrono_0_4"] }
lazy_static = "1.5.0"
log = "0.4"
log4rs = "1.4"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicase = "2.8.1"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
deadpool = "0.12.3"
thiserror = "2.0.17"
rand = "0.9.2"
assert_cmd = "2.1.1"

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color", "color-auto"] }
