[package]
name = "picture-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
dateparser = "0.3.1"
dpc-pariter = "0.5.1"
interim = { version = "0.2.1", features = ["chrono_0_4"] }
lazy_static = "1.5.0"
log = "0.4"
log4rs = "1.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicase = "2.9.0"
walkdir = "2.5.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
deadpool = "0.13.0"
thiserror = "2.0.18"
rand = "0.10.1"
assert_cmd = "2.2.0"

[dev-dependencies]
assert_cmd = { version = "2.2.0", features = ["color", "color-auto"] }
